trying something new

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                     </p>
                 </div>
             </div>
+
+            <div class="food-section">
+                hello
+                
+            </div>
         </div>
     </main>
 </body>
