fixed some UI bugs

--- a/index.html
+++ b/index.html
@@ -25,14 +25,85 @@
             <div class="hero-container">
                 <div class="hero-wallpaper">
                     <p> <span>Savor the Taste of Perfection.</span><br>
-                        Experience the finest dishes crafted with passion, fresh ingredients, and culinary expertise. Step into a world of flavors that will delight your senses.
+                        Experience the finest momos crafted with passion, fresh ingredients, and culinary expertise. Step into a world of flavors that will delight your senses.
                     </p>
                 </div>
             </div>
 
             <div class="food-section">
-                hello
-                
+                <h2>Hot Dishes</h2>
+                <div class="food-items chicken">
+                    <div class="food-details">
+                        <h4>Chicken Momo</h4>
+                        <p>Tender chicken cooked in a rich, creamy tomato-based sauce with a perfect balance of spices.</p>
+                        <div>
+                            <p>Rs. <span>250/-</span></p>
+                        </div>
+                    </div>
+                    <div class="food-image">
+                        <img src="assests/chicken-momo.webp" >
+                    </div>
+                </div>
+                <div class="food-items tandori">
+                    <div class="food-details">
+                        <h4>Tandoori Momo</h4>
+                        <p>Smoky, succulent chicken marinated in aromatic spices and grilled to perfection.</p>
+                        <div>
+                            <p>Rs. <span>300/-</span></p>
+                        </div>
+                    </div>
+                    <div class="food-image">
+                        <img src="assests/tandoori.avif" >
+                    </div>
+                </div>
+                <div class="food-items paneer">
+                    <div class="food-details">
+                        <h4>Paneer Momo</h4>
+                        <p>Flavorful paneer marinated with rich spices and grilled for a satisfying vegetarian option.</p>
+                        <div>
+                            <p>Rs. <span>210/-</span></p>
+                        </div>
+                    </div>
+                    <div class="food-image">
+                        <img src="assests/paneer.jpg" >
+                    </div>
+                </div>
+                <div class="food-items jhol">
+                    <div class="food-details">
+                        <h4>Jhol Momo</h4>
+                        <p>A tangy and spicy broth, bursting with bold flavors that pair perfectly with our dishes.</p>
+                        <div>
+                            <p>Rs. <span>260/-</span></p>
+                        </div>
+                    </div>
+                    <div class="food-image">
+                        <img src="assests/jhol.jpg" >
+                    </div>
+                </div>
+                <div class="food-items fried">
+                    <div class="food-details">
+                        <h4>Fried Momo</h4>
+                        <p>These crispy, golden pockets are stuffed with a savory filling of your choice, be it chicken or vegetables.</p>
+                        <div>
+                            <p>Rs. <span>220/-</span></p>
+                        </div>
+                    </div>
+                    <div class="food-image">
+                        <img src="assests/fried-momo.jpeg" >
+                    </div>
+                </div>
+                <div class="food-items kurkure">
+                    <div class="food-details">
+                        <h4>Kurkure Momo</h4>
+                        <p>Crispy, spiced snack that offers the perfect crunch to complement your meal.</p>
+                        <div>
+                            <p>Rs. <span>230/-</span></p>
+                        </div>
+                    </div>
+                    <div class="food-image">
+                        <img src="assests/kurkure.avif" >
+                    </div>
+                </div>
             </div>
         </div>
     </main>
