--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body class="bg-slate-300 h-screen flex justify-center items-center">
 
     <div class="container p-8 w-1/3 bg-gray-900 rounded-xl border-4 border-solid border-black">
-        <div class="screen h-36 bg-green-800 rounded-xl mb-2"></div>
+        <div class="screen h-36 bg-green-800 p-2 rounded-xl mb-2 flex justify-end items-end">
+            <p class="bg-amber-500 text-2xl font-customFont">0</p>
+        </div>
         <div class="first-btn-row flex justify-around items-center mb-2">
             <button class="number bg-gray-50 text-4xl h-16 w-36 mt-4 rounded-xl">clear</button>
             <button class="number bg-gray-50 text-5xl h-16 w-24 mt-4 rounded-full flex justify-center items-center">
