--- a/index.html
+++ b/index.html
@@ -4,44 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="main.js" defer></script>
 </head>
-<body class="bg-slate-300 h-screen flex justify-center items-center">
-
-    <div class="container p-8 w-1/3 bg-gray-900 rounded-xl border-4 border-solid border-black">
-        <div class="screen h-36 bg-green-800 p-2 rounded-xl mb-2 flex justify-end items-end">
-            <p class="bg-amber-500 text-2xl font-customFont">0</p>
+<body>
+    <div class="calculator">
+        <div class="display">
+            <p class="operator-sign"></p>
+            <p class="screen-digits"></p>
         </div>
-        <div class="first-btn-row flex justify-around items-center mb-2">
-            <button class="number bg-gray-50 text-4xl h-16 w-36 mt-4 rounded-xl">clear</button>
-            <button class="number bg-gray-50 text-5xl h-16 w-24 mt-4 rounded-full flex justify-center items-center">
-                <img class="h-10 " src="power-on.png">
-            </button>
-
-        </div>
-        <div class="first-btn-row flex justify-between">
-            <button class="number bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">7</button>
-            <button class="number bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">8</button>
-            <button class="number bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">9</button>
-            <button class="operator bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">/</button>
-        </div>
-        <div class="second-btn-row flex justify-between">
-            <button class="number bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">4</button>
-            <button class="number bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">5</button>
-            <button class="number bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">6</button>
-            <button class="operator bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">x</button>
-        </div>
-        <div class="third-btn-row flex justify-between">
-            <button class="number bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">1</button>
-            <button class="number bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">2</button>
-            <button class="number bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">3</button>
-            <button class="operator bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">-</button>
-        </div>
-        <div class="fourth-btn-row flex justify-between">
-            <button class="number bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">.</button>
-            <button class="number bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">0</button>
-            <button class="operator bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">=</button>
-            <button class="operator bg-gray-50 text-5xl h-24 w-24 mt-4 mb-2 rounded-full">+</button>
+        <div class="btn-container">
+            <div class="btn-items numbers">7</div>
+            <div class="btn-items numbers">8</div>
+            <div class="btn-items numbers">9</div>
+            <div class="btn-items operators">/</div>
+            <div class="btn-items numbers">4</div>
+            <div class="btn-items numbers">5</div>
+            <div class="btn-items numbers">6</div>
+            <div class="btn-items operators">x</div>
+            <div class="btn-items numbers">1</div>
+            <div class="btn-items numbers">2</div>
+            <div class="btn-items numbers">3</div>
+            <div class="btn-items operators">-</div>
+            <div class="btn-items clear">C</div>
+            <div class="btn-items numbers">0</div>
+            <div class="btn-items equals">=</div>
+            <div class="btn-items operators">+</div>
         </div>
     </div>
 </body>
